[tool.poetry]
name = "subtitlecore"
version = "0.1.5"
description = "Parse srt file content into well-formed structures"
authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
webvtt-py = "^0.4.3"
click = "^7.1.1"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"
pip = "^21.0.1"
spacy = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
subtitlecore_parse2sens = "subtitlecore.entry:parse2sens"
subtitlecore_parse2text = "subtitlecore.entry:parse2text"
subtitlecore_content = "subtitlecore.entry:get_subtitle_content"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

