[tool.poetry]
name = "subtitlecore"
version = "0.1.14"
description = "Parse srt file content into well-formed structures"
authors = ["Phoenix.Grey <phoenix.grey0108@gmail.com>"]
repository = "https://github.com/qishe-nlp/subtitlecore"
readme = "README.md"
documentation = "https://qishe-nlp.github.io/subtitlecore/"
keywords = ["subtitle", "parse", "srt"] 

[tool.poetry.dependencies]
python = "^3.8"
webvtt-py = "^0.4.3"
click = "^8.0.3"
spacy = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-jquery = "^4.1"

[tool.poetry.scripts]
subtitlecore_parse2sens = "subtitlecore.entry:parse2sens"
subtitlecore_parse2text = "subtitlecore.entry:parse2text"
subtitlecore_content = "subtitlecore.entry:get_subtitle_content"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

